fix(frontend): fix question overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
+#questionDescription pre {
+  white-space: pre-wrap;
+}
